# botjurisv3

./: .coverage  .env  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  Procfile  README.md  docker-compose.yml  last_payload.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  send_message.json  test_openai_key.py  test_payload.json
.github/worksflow/: ci.yml
app/: main.py  models.py  utils.py
app/apis/: evolution.py
app/config/: __init__.py  messages.py  prompts.py
app/core/: cache.py  config.py  dependencies.py  distributed_lock.py  error_handler.py  exceptions.py  health.py  logger_config.py  metrics.py  protocols.py  queue_config.py
app/database/: connection.py  models.py  queries.py
app/middleware/: error_handler.py  rate_limit.py  security.py  security_headers.py
app/routers/: health.py  webhook.py
app/schemas/: common.py  ia.py  lead.py  response.py  webhook.py
app/service/: cache_invalidator.py  cache_service.py  crypto.py  evolution_api.py  llm_response.py  log_payload.py  process.py  quebra_mensagem.py  queue_manager.py  sanitize.py  send_message.py
app/tasks/: __init__.py  webhook_processor.py
app/workers/: worker.py
tests/: conftest.py  test_cache_ia.py  test_cache_invalidator.py  test_cache_lead.py  test_cache_manual.py  test_database.py  test_payload_invalid.json  test_payload_ok.json  test_sanitize.py  test_signature.py
tests/integration/: test_webhook.py
tests/unit/: test_cache_service.py  test_config.py  (+4 more)
(+5 files in other folders)
